<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"

            ></include>

        <TableRow
            android:paddingTop="30dp"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Welkom!"
                android:layout_gravity="center"
                android:id="@+id/welcomeTextView"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:paddingTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="300dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Log hieronder in met de gegevens die je van je school gekregen hebt!"
                android:layout_gravity="center"
                android:id="@+id/explainTextView"
                android:layout_span="2" />

        </TableRow>

        <TableRow
            android:paddingTop="100dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/loginNameLabel"
                android:text="@string/loginNameLabelText"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>


            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/loginNameField"
                android:inputType="text" />

        </TableRow>


        <TableRow
            android:paddingTop="20dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/passwordLabel"
                android:text="@string/passwordLabelText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passwordField"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_marginTop="40dp" >

            <Button
                android:text="@string/loginButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:layout_span="2" >

            </Button>
        </TableRow>


    </TableLayout>

</ScrollView>